; ModuleID = '/home/carl/AnghaBench/kphp-kdb/common/extr_xz_dec.c_xz_dec_reset.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/common/extr_xz_dec.c_xz_dec_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xz_dec = type { %struct.TYPE_2__, i32, i32, i64, i64, i64, i32 }
%struct.TYPE_2__ = type { i32, i64 }

@SEQ_STREAM_HEADER = common dso_local global i32 0, align 4
@STREAM_HEADER_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @xz_dec_reset(%struct.xz_dec* %0) #0 {
  %2 = alloca %struct.xz_dec*, align 8
  store %struct.xz_dec* %0, %struct.xz_dec** %2, align 8
  %3 = load i32, i32* @SEQ_STREAM_HEADER, align 4
  %4 = load %struct.xz_dec*, %struct.xz_dec** %2, align 8
  %5 = getelementptr inbounds %struct.xz_dec, %struct.xz_dec* %4, i32 0, i32 6
  store i32 %3, i32* %5, align 8
  %6 = load %struct.xz_dec*, %struct.xz_dec** %2, align 8
  %7 = getelementptr inbounds %struct.xz_dec, %struct.xz_dec* %6, i32 0, i32 5
  store i64 0, i64* %7, align 8
  %8 = load %struct.xz_dec*, %struct.xz_dec** %2, align 8
  %9 = getelementptr inbounds %struct.xz_dec, %struct.xz_dec* %8, i32 0, i32 4
  store i64 0, i64* %9, align 8
  %10 = load %struct.xz_dec*, %struct.xz_dec** %2, align 8
  %11 = getelementptr inbounds %struct.xz_dec, %struct.xz_dec* %10, i32 0, i32 3
  store i64 0, i64* %11, align 8
  %12 = load %struct.xz_dec*, %struct.xz_dec** %2, align 8
  %13 = getelementptr inbounds %struct.xz_dec, %struct.xz_dec* %12, i32 0, i32 2
  %14 = call i32 @memzero(i32* %13, i32 4)
  %15 = load %struct.xz_dec*, %struct.xz_dec** %2, align 8
  %16 = getelementptr inbounds %struct.xz_dec, %struct.xz_dec* %15, i32 0, i32 1
  %17 = call i32 @memzero(i32* %16, i32 4)
  %18 = load %struct.xz_dec*, %struct.xz_dec** %2, align 8
  %19 = getelementptr inbounds %struct.xz_dec, %struct.xz_dec* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 1
  store i64 0, i64* %20, align 8
  %21 = load i32, i32* @STREAM_HEADER_SIZE, align 4
  %22 = load %struct.xz_dec*, %struct.xz_dec** %2, align 8
  %23 = getelementptr inbounds %struct.xz_dec, %struct.xz_dec* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  store i32 %21, i32* %24, align 8
  ret void
}

declare dso_local i32 @memzero(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
